# insightful-routines

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pr.yml
handlers/: drinks_hot_intake.py  drinks_milk_intake.py  drinks_other_intake.py  evening_skincare.py  face_photo_processing.py  first_meet.py  food_intake_breakfast.py  food_intake_dinner.py  food_intake_lunch.py  hot_drinks_tracking.py  lunch_food_intake.py  mornig_skincare.py  other_drinks_tracking.py  photo_face.py  pimples.py  report.py  skincare_evening.py  skincare_morning.py  snack_tracking.py  snacks_intake.py  stress_level.py  supplements_intake.py  user_onboarding.py  user_report.py  water_intake.py  welcome.py  workout_tracking.py  workouts.py
insightful_routines/: config.py  main.py  settings.py
insightful_routines/handlers/: breakfast_food_intake.py  dinner_food_intake.py  face_photo_processing.py  hot_drinks_tracking.py  lunch_food_intake.py  milk_drinks_tracking.py  other_drinks_tracking.py  pimple_tracking.py  skincare_evening.py  skincare_morning.py  snack_tracking.py  stress_tracking.py  supplement_tracking.py  user_onboarding.py  user_report.py  user_welcome.py  water_tracking.py  workout_tracking.py
insightful_routines/keyboards/: yes_change.py  yes_no.py
insightful_routines/models/: base.py  breakfast.py  face_photo.py  hot_drinks.py  models.py  morning_skincare.py  other_drinks.py  snacks.py  stress.py  user.py  water.py  workouts.py
insightful_routines/types/: __init__.py  age_group.py  allergies.py  skin_type.py
keyboards/: drinks_hot.py  drinks_milk.py  drinks_other.py  food.py  photo.py  skincare.py  stress.py  supplements.py  workout.py  yes_no.py
models/: __init__.py  dinner.py  drinks.py  evening_skincare.py  food.py  lunch.py  milk_drinks.py  models.py  pimples.py  skincare.py  snacks.py  supplements.py  user.py
utils/: face_classification.py  face_position.py
