[tool.poetry]
name = "insightful-routines"
version = "0.3.1"
description = "This is a package for 'insightful-routines' Telegram bot"
authors = ["Anzhelina Shevchuk"]
readme = "README.md"
packages = [{include = "insightful_routines"}]
license = "GPL-3.0-only"
repository = "https://github.com/anz-hexe/insightful-routines"


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.2.1"
rich = "^13.7.1"
SQLAlchemy = { version = "^2.0.29", extras = ["postgresql"] }
facenet-pytorch = "^2.5.3"
pandas = "^2.2.2"
importlib_resources = "^6.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[tool.poetry.scripts]
insightful-routines-bot = 'insightful_routines.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "pyproject.toml:version"
]
branch = "main"
commit_parser = "angular"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true